--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   uno: 1.1.10
   asuka: 2.2.1
   connectivity_plus: 6.1.0
+  flutter_secure_storage: 9.2.2
 
 dev_dependencies:
   flutter_test:
